--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
       <div class="col-lg-6 order-lg-2 order-md-1 order-sm-2 feature-image">
 
-        <img id="feature-img-1" class="img-fluid w-100" src="images/desktop/image-transform.jpg" alt="Transform">
+        <img id="feature-img" class="img-fluid w-100" src="images/desktop/image-transform.jpg" alt="Transform">
 
       </div>
 
@@ -92,7 +92,7 @@
     <div class="row">
 
       <div class="col-lg-6 feature-image">
-        <img id="feature-img-2" class="img-fluid w-100" src="images/desktop/image-stand-out.jpg" alt="Stand-Out">
+        <img id="feature-img" class="img-fluid w-100" src="images/desktop/image-stand-out.jpg" alt="Stand-Out">
       </div>
       <div class="col-lg-6 feature-transform">
         <h1>Stand out to the right audience</h1>
